# labs

final_exam_no_sudo/: Dockerfile_KIMERA  README.md
lab1/: README.md
lab2/two_drones_pkg/src/: frames_publisher_node.cpp  plots_publisher_node.cpp
lab3/: CMakeLists.txt  README.md  package.xml
lab3/launch/: self_flow.launch.yaml  two_frames_tracking.launch.yaml  video_tracking.launch.yaml
lab3/src/: akaze_feature_tracker.cpp  brisk_feature_tracker.cpp  feature_tracker.cpp  lk_feature_tracker.cpp  orb_feature_tracker.cpp  self_flow.cpp  sift_feature_tracker.cpp  track_features.cpp
lab4/src/: pose_estimation.cpp
lab5/: CMakeLists.txt
lab5/rviz/: deliverable_4.rviz
lab6/: CMakeLists.txt  package.xml
lab6/src/: deliverable_3.cpp
lab7/controller_pkg/: CMakeLists.txt  package.xml
lab7/controller_pkg/src/: controller_node.cpp
lab7/mav_comm/mav_state_machine_msgs/: CMakeLists.txt
lab7/mav_comm/mav_state_machine_msgs/msg/: StartStopTask.msg
lab7/mav_comm/mav_system_msgs/: CMakeLists.txt  package.xml
lab7/tesse-interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab7/tesse-interface/install/tesse/share/tesse/: package.sh
lab7/tesse-interface/log/: latest_build
lab7/tesse_ros_bridge/config/: params.yaml
lab7/tesse_ros_bridge/tesse_ros_bridge/: noise_simulator.py  quadrotor_control_interface.py  tesse_ros_node.py
lab8/: README.md
lab8_no_sudo/: run_docker.sh
