<?xml version="1.0"?>
<package format="3">
  <name>mav_system_msgs</name>
  <version>0.0.0</version>
  <description>
    Messages specific to MAV utils scripts.
  </description>
  <maintainer email="christian.lanegger@mavt.ethz.ch">Christian Lanegger</maintainer>
  <license>TBD</license>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>std_msgs</build_depend>
  
  <!-- Execution/runtime dependencies -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- ROS 2 interface package group -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
